Margin fix on ie modal

--- a/core/app/assets/stylesheets/site_messages.css.less
+++ b/core/app/assets/stylesheets/site_messages.css.less
@@ -18,4 +18,8 @@
     float: left;
     margin-top: 5px;
   }
+
+  .modal-footer {
+    margin: 0 -10px;
+  }
 }
